--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 .header {
     padding: 0 32px;
     display: flex;
-    background-color: #556cd6;
+    background-color: #e57373;
     justify-content: space-between;
     flex-direction: row;
     min-height: 54px;
